PI-2987 Replace search endpoints with new integration API endpoints (#34)